// Copyright (c) 2013, Cloudera, inc.
// Confidential Cloudera Information: Covered by NDA.
//
// Request/Response in different package to test that RPC methods
// handle arguments with packages different from the service itself.
package kudu.rpc_test_diff_package;

message ReqDiffPackagePB {
}
message RespDiffPackagePB {
}
